<project xmlns="http://maven.apache.org/POM/4.0.0">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ru.nanodev</groupId>
  <artifactId>NanoForge</artifactId>
  <version>1.4.0</version>
  <packaging>jar</packaging>

  <properties>
    <!-- ВАЖНО: spigot-api 1.20.4 сам скомпилирован под Java 17 (class file version 61) -
         компилятору JDK нужна версия 17+ просто чтобы ПРОЧИТАТЬ этот jar как зависимость,
         иначе ошибка "bad class file ... should be 52.0". Поэтому в CI (.github/workflows)
         используется setup-java 17. При этом maven.compiler.release=8 гарантирует, что
         НАШ СОБСТВЕННЫЙ выходной байткод остаётся на уровне Java 8 - плагин по-прежнему
         загрузится и на старых 1.16-серверах, где сама Minecraft ещё не требует Java 17. -->
    <maven.compiler.release>8</maven.compiler.release>
    <!-- ВАЖНО: maven.compiler.release=8 выше применяется maven-compiler-plugin'ом
         И к testCompile тоже, если явно не переопределить - а тесты используют
         List.of(...) (Java 9+) и статические моки Mockito, которым правильнее
         работать на современной JVM. testRelease специально распознаётся
         maven-compiler-plugin с версии 3.6+ ИМЕННО для testCompile-выполнения,
         оставляя release=8 только для основного (выходного) байткода плагина. -->
    <maven.compiler.testRelease>17</maven.compiler.testRelease>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- версии тестовых зависимостей вынесены сюда, чтобы поднимать одним местом -->
    <junit.version>5.10.2</junit.version>
    <mockito.version>5.11.0</mockito.version>
    <assertj.version>3.25.3</assertj.version>
  </properties>

  <repositories>
    <repository>
      <id>spigotmc-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/releases/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Обычный Bukkit/Spigot API. Используй ту версию, под которую собираешь:
         1.16.5-R0.1-SNAPSHOT ... 1.21.1-R0.1-SNAPSHOT. API обратно совместим
         для наших целей, поэтому одна сборка спокойно работает 1.16-1.21.x.
         Никакого PaperMC API здесь намеренно нет - только spigot-api. -->
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Нужен ТОЛЬКО чтобы скомпилировать NanoForgeExpansion (см. integration/) -
         PlaceholderExpansion абстрактный класс, чистой рефлексией не обойтись.
         provided -> в NanoForge.jar не упаковывается; на сервере без самого
         PlaceholderAPI (softdepend, не depend) весь остальной плагин как и
         раньше прекрасно работает, просто эта одна интеграция не включится. -->
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.12.3</version>
      <scope>provided</scope>
    </dependency>

    <!-- ==================== ТЕСТОВЫЕ ЗАВИСИМОСТИ ==================== -->

    <!-- JUnit 5 (Jupiter) - основной движок тестов -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- @ParameterizedTest / @ValueSource / @CsvSource и т.д. -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Mockito - мокает Player/PluginManager/Bukkit и т.д. без реального сервера.
         С версии 5.x статический мок (mockStatic) работает из коробки, без
         отдельного mockito-inline. Сознательно НЕТ MockBukkit: две попытки её
         подключить провалились по разным причинам (сначала не резолвился
         транзитивный paper-api, потом версия MockBukkit-v1.20 оказалась несовместима
         в рантайме с версией spigot-api 1.20.4 - PotionEffectType падал с NPE при
         инициализации ServerMock). Полноценная имитация целого Bukkit-сервера
         требует точного совпадения версий, которое без доступа в интернет надёжно
         не подобрать - поэтому тестируем через точечные моки Mockito, без
         эмуляции всего сервера целиком. -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- AssertJ - более читаемые ассерты (assertThat(...).isEqualTo(...) и т.д.) -->
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>NanoForge</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <!-- явно фиксируем версию surefire, чтобы JUnit 5 гарантированно подхватился -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
    </plugins>
  </build>
</project>

<!-- by t.me/NanoDev_mc -->
